# AIOLOS-into-PumpKin-tool

./: .gitignore  KIDA_additions.reac  LICENSE  MANIFEST.in  PACKAGING_GUIDE.md  README.md  input.txt  main.py  pyproject.toml  qt_conditions.txt  qt_densities.txt  qt_matrix.txt  qt_rates.txt  qt_reactions_list.txt  qt_species_list.txt  setup.py  steamfull_step3.reac  thermo.reac
Conversion_Tool/: calculating_rates.py  getting_reactions_from_log.py  main.py  main_command.py  making_densities_file.py  making_general_input_files.py  making_rates_file.py  processing_aiolos_reac_file.py  reading_rates_from_new_chem_files.py
Outputs/: deleted_pathways_plots.py  pathway_rates_plots.py  plot_styles.py  plotting_main.py  rates_of_reactions_plots.py  spagehtti_plots.py  species_specific_plots.py
PumpKin/: pumpkin_output_cell_000.txt  pumpkin_output_cell_001.txt  pumpkin_output_cell_002.txt  pumpkin_output_cell_003.txt  pumpkin_output_cell_004.txt  pumpkin_output_cell_005.txt  pumpkin_output_cell_006.txt  pumpkin_output_cell_007.txt  pumpkin_output_cell_008.txt  pumpkin_output_cell_009.txt  pumpkin_output_cell_010.txt  pumpkin_output_cell_011.txt  pumpkin_output_cell_012.txt  pumpkin_output_cell_013.txt  pumpkin_output_cell_014.txt  pumpkin_output_cell_015.txt  pumpkin_output_cell_016.txt  pumpkin_output_cell_017.txt  pumpkin_output_cell_018.txt  pumpkin_output_cell_019.txt  pumpkin_output_cell_020.txt  pumpkin_output_cell_021.txt  pumpkin_output_cell_022.txt  pumpkin_output_cell_023.txt  pumpkin_output_cell_024.txt  pumpkin_output_cell_025.txt  pumpkin_output_cell_026.txt  pumpkin_output_cell_027.txt  pumpkin_output_cell_028.txt  pumpkin_output_cell_029.txt  pumpkin_output_cell_030.txt  pumpkin_output_cell_031.txt  pumpkin_output_cell_032.txt  pumpkin_output_cell_033.txt  pumpkin_output_cell_034.txt  pumpkin_output_cell_035.txt  pumpkin_output_cell_036.txt  pumpkin_output_cell_037.txt  pumpkin_output_cell_038.txt  pumpkin_output_cell_039.txt  (+195 more)
Test_B/: README.md  pumpkin_output_cell_000.txt  qt_conditions.txt  qt_matrix.txt  qt_rates.txt  qt_species_list.txt
Test_C/: input.txt  pumpkin_output_cell_001.txt  qt_conditions.txt  qt_densities.txt  qt_matrix.txt  qt_rates.txt  qt_reactions_list.txt  qt_species_list.txt
Tests/: __init__.py  test_calculating_rates.py  test_deletion.py  test_main.py  test_making_densities_file.py  test_pathway_rates.py  test_processing_aiolos_reac_file.py  test_species_plots.py
aiolos_pumpkin_tool/: __init__.py  cli.py  main.py  utils.py
aiolos_pumpkin_tool/conversion_tool/: __init__.py  getting_reactions_from_log.py  main.py  main_command.py  making_general_input_files.py  making_rates_file.py  reading_rates_from_new_chem_files.py
aiolos_pumpkin_tool/data/: KIDA_additions.reac  Test_pumpkin_output_cell_000.txt  __init__.py  steamfull_step3.reac  thermo.reac
aiolos_pumpkin_tool/outputs/: README.md  __init__.py  deleted_pathways_plots.py  pathway_rates_plots.py  plot_styles.py  spagehtti_plots.py  species_specific_plots.py
aiolos_pumpkin_tool/pumpkin/: __init__.py  running_pumpkin.py
data/: qt_matrix.txt  qt_species_list.txt
docs/: conf.py  index.rst
(+6 files in other folders)
